--- a/content/cn/R与Cpp混合编程.Rmd
+++ b/content/cn/R与Cpp混合编程.Rmd
@@ -15,6 +15,22 @@ Error in system(cmd, intern = !showOutput) : 'C:/Program' not found
 
 1) 最大值最小值溢出，C++中最小值。非常接近0的溢出为0。比如$4^{-200}*A %( 2* 4^{-200}*B)$，对于这种就需要先把$4^{-200}$约掉后再计算两个矩阵的逐元除法。
 
+2)整除错误：C++中整数除整数等于相除之后再向下取整。如下示例代码：
+```{Rmd}
+ U0 = (bx - 1/n *A * tA * a) / as_scalar(1- 1/n * a.t()*tA * a);
+## 这里1/n=0 而不等于真正的小数。应该修改成：
+ U0 = (bx - 1.0/n *A * tA * a) / as_scalar(1- 1.0/n * a.t()*tA * a);
+```
+这是我找了大半天的错误才找到错误的原因！气死我了，好多的坑。我知道这样C++有这个语法规则，但是写代码的时候还是容易疏忽，而且还找不到错误的点在哪里。 
+
+3) 公式中的加号运算错误的写成减法运算，导致出错。这是我容易出错的地方。
+例如：
+```{Rmd}
+X_tk = X - repmat(U0.t()  + Mu0.row(k)* W0.t(), n, 1);
+#错误写成：
+X_tk = X - repmat(U0.t()  - Mu0.row(k)* W0.t(), n, 1);
+```
+
 # 头文件的意义
 Cpp中有两类文件，一个是cpp源文件.cpp为扩展名，用于写源代码，包括变量和函数定义；一个是头文件.h为扩展名，用于申明变量和函数，不能包含变量和函数的定义。 只能在头文件中写形如：extern int a;和void f();的句子。这些才是声明。如果写上int a;或者void f() {}这样的句子，那么一旦这个头文件被两个或两个以上的.cpp文件包含的话，编译器会立马报错。 "extern  int a;"表示申明一个已定义的变量；"void f();"表示申明一个已定义的无返回值的函数f。
 但是，有三种情况除外，头文件中可以写const和static对象的定义；头文件中可 以写内联函数（inline）的定义；头文件中可以写类 （class）的定义。
