--- a/content/cn/SpacerangerLearn.Rmd
+++ b/content/cn/SpacerangerLearn.Rmd
@@ -13,7 +13,13 @@ https://support.10xgenomics.com/spatial-gene-expression/software/downloads/lates
 ### 将数据处理成count文件的命令
 需要指定几个路径：转录组参照数据文件"transcriptome", fastqs数据文件"fastqs", 图像数据文件"image"。
 ```{linux}
-spaceranger count --id=CRC3  \--transcriptome=/nas/yangyi2/CRC/refdata-gex-GRCh38-2020-A \--fastqs=/nas/yangyi2/CRC/HN00134842_10X_RawData_Outs/CRC3/HF37NCCX2 \--sample=CRC3  \--image=/nas/yangyi2/CRC/image/CRC3.tif \--slide=V10M02-072 \--area=C1
+spaceranger count --id=CRC33  \--transcriptome=/nas/yangyi2/CRC/refdata-gex-GRCh38-2020-A \--fastqs=/nas/yangyi2/CRC/HN00134842_10X_RawData_Outs/CRC3/HF37NCCX2 \--sample=CRC3  \--image=/nas/yangyi2/CRC/image/CRC3.tif \--slide=V10M02-072 \--area=C1
+#其中id是结果输出文件夹，如果在当前目录下该文件夹不存在，则新建该文件夹
+# transcriptome是参照数据文件夹路径，即FASTQ文件的路径
+# slide是载玻片的ID号
+# area是指不获区域
+# image是指高分辨率图像文件
+# sample是指根据FASTQ文件名所得到的样本名称
 ```
 
 
