--- a/content/en/2021-01-15-mPPCA.Rmd
+++ b/content/en/2021-01-15-mPPCA.Rmd
@@ -102,18 +102,25 @@ So far, each parameter has a iterative closed-form solution.
 
 ## Convergence check
 Since  EM algorithm is a subclass of MM algorithm, by the principle of MM algorithm we can check the convergence by the fact that
-$$Q(\theta; \theta^{(t)})\leq L(\theta) ~~ for all~~ \theta$$
+$$g(\theta; \theta^{(t)})\leq L(\theta) ~~ for all~~ \theta$$
 and 
-$$Q(\theta; \theta^{(t)})= L(\theta) ~if~~and ~only~if~ \theta=  \theta^{(t)}.$$
+$$g(\theta; \theta^{(t)})= L(\theta) ~if~~and ~only~if~ \theta=  \theta^{(t)}.$$
+```{Rmd}
+Note: g-function is not the Q-function!!! 
+  There are some relation between them.
+```
+
 Thus, we have 
-$$L(\theta^{(t)})=Q(\theta^{(t)}; \theta^{(t)})\leq Q(\theta^{(t+1)}; \theta^{(t)})\leq L(\theta^{(t+1)}). \tag{2.4.1}$$
+$$L(\theta^{(t)})=g(\theta^{(t)}; \theta^{(t)})\leq g(\theta^{(t+1)}; \theta^{(t)})\leq L(\theta^{(t+1)}). \tag{2.4.1}$$
 Recursively, we have
-$$Q(\theta^{(t+1)}; \theta^{(t)}) \leq Q(\theta^{(t+2)}; \theta^{(t+1)}). \tag{2.4.2}$$
+$$g(\theta^{(t+1)}; \theta^{(t)}) \leq g(\theta^{(t+2)}; \theta^{(t+1)}). \tag{2.4.2}$$
 Thus, there are two methods to check the convergence (correction of programming) of algorithm from the aspect of the objective function.
  
 1) By $(2.4.1)$, we can check whether the value of the observed loglikelihood function is nondecreasing. 
 
-2) By $(2.4.2)$, we can check whether the value of the Q-function is nondecreasing. 
+2) By $(2.4.2)$, we can check whether the value of the g-function is nondecreasing. 
+
+3) Check $dQ=Q(\theta^{t+1};\theta^{(t)})- Q(\theta^{t};\theta^{(t)})$ whether approach 0.
 
 # Generalized EM algorithm
 
@@ -175,6 +182,30 @@ $$\ln f(x;\theta) \geq   E_{z|x;\theta^{(t)}}\ln f(x,z;\theta) - E_{z|x;\theta^{
 The minorization function 
 $$g(\theta; \theta^{(t)})= E_{z|x;\theta^{(t)}}\ln f(x,z;\theta) + C(\theta^{(t)}),$$
 where $C(\theta^{(t)})$ is a constant independent of $\theta$. Thus, we only require to maximize the posterior expectation of $z$  on full-data loglikelihood, and EM algorithm is a special case of MM algorithm.
+
+## Alternative drivation of MM algorithm
+
+Actually, Q function is increased in iteration, which refers to 
+$$Q(\theta^{(t+1)};\theta^{(t)}) \geq Q(\theta^{(t)}; \theta^{(t)}),$$
+rather than 
+$$Q(\theta^{(t+2)};\theta^{(t+1)}) \geq Q(\theta^{(t+1)}; \theta^{(t)}),$$
+which is false. 
+
+We know observed loglikelihood
+$$\log P(Y;\theta)= \log P(Y,Z;\theta) - \log P(Z|Y;\theta),$$
+so take expectation of $Z$ conditional on $Y$ given $\theta^{(t)}$,
+$$\log P(Y;\theta) = Q(\theta;\theta^{(t)}) - H(\theta;\theta^{(t)}),$$
+where $H(\theta;\theta^{(t)})= \int P(Z|Y;\theta^{(t)})\log P(Z|Y;\theta)$.
+Thus,
+$$\log P(Y;\theta) - \log P(Y;\theta^{(t)}) =\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\} + \Delta H(\theta;\theta^{(t)}),$$
+where $\Delta H(\theta;\theta^{(t)})=-H(\theta;\theta^{(t)}) + H(\theta^{(t)};\theta^{(t)})$, which is the KL-divergence of $P(Z|Y;\theta)$ and $P(Z|Y;\theta^{(t)})$ and non-negative, equal zero if and only if $\theta=\theta^{(t)}$.
+
+Therefore,
+$$\log P(Y;\theta) \geq \log P(Y;\theta^{(t)}) +\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\}$$
+Let $g(\theta; \theta^{(t)})=\log P(Y;\theta^{(t)}) +\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\}$, which is the minorization function of $l_{obs}(\theta)=\log P(Y;\theta)$.
+
+By MM principle, we have
+$$l_{obs}(\theta^{(t+1)})\geq g(\theta^{(t+1)}; \theta^{(t)})\geq g(\theta^{(t)}; \theta^{(t)})=l_{obs}(\theta^{(t)}).$$
 
 # ECM algorithm
 ECM algorithm is also an extension of EM algorithm, which solves the computation problem in M-step and has good convergence properties.
