--- a/content/cn/R与Cpp混合编程.Rmd
+++ b/content/cn/R与Cpp混合编程.Rmd
@@ -36,6 +36,97 @@ X_tk = X - repmat(U0.t()  + Mu0.row(k)* W0.t(), n, 1);
 X_tk = X - repmat(U0.t()  - Mu0.row(k)* W0.t(), n, 1);
 ```
 
+4) 避免log(a)当a=0报错的情况，可以使用
+```{Rmd}
+log(a + (a==0)) # a=0时,值会等于0
+```
+
+
+#引用传递和值传递的区别
+
+引用专递就是传递对象本身，值传递是传递对象的复制品。
+打个比方：比如你有一张相片要修改，把相片编辑工具看作函数，把被处理的相片看作参数，那么直接操作相片原件就相当于引用传递，把相片复制一份然后操作这个复制品就叫值传递。
+
+很明显引用传递会影响当作参数的对象，而值传递不会影响当作参数的对象
+C++语言中，函数的参数和返回值的传递方式有三种：
+值传递、指针传递和引用传递。
+
+以下是"值传递"的示例程序。
+
+由于Func1函数体内的x是外部变量n的一份拷贝，改变x的值不会影响n, 所以n的值仍然是0。
+```{Rmd}
+void Func1(int x)
+{
+x = x + 10;
+}
+...
+int n = 0;
+Func1(n);
+
+cout << "n = " << n << endl; // n = 0
+```
+
+以下是"指针传递"的示例程序。
+由于Func2函数体内的x是指向外部变量n的指针，改变该指针的内容将导致n的值改变，所以n的值成为10。
+```{Rmd}
+void Func2(int *x)
+{
+(* x) = (* x) + 10;
+}
+...
+int n = 0;
+Func2(&n);
+
+cout << "n = " << n << endl; // n = 10
+```
+
+以下是"引用传递"的示例程序。
+由于Func3函数体内的x是外部变量n的引用，x和n是同一个东西，改变x等于改变n，所以n的值成为10。
+```{Rmd}
+void Func3(int &x)
+{
+x = x + 10;
+}
+...
+int n = 0;
+Func3(n);
+cout << "n = " << n << endl; // n = 10
+```
+ 
+对比上述三个示例程序，会发现"引用传递"的性质象"指针传递"，而书写方式象"值传递"。
+实际上"引用"可以做的任何事情"指针"也都能够做，为什么还要"引用"这东西？
+答案是"用适当的工具做恰如其分的工作"。
+指针能够毫无约束地操作内存中的任何东西，尽管指针功能强大，但是非常危险。
+如果的确只需要借用一下某个对象的"别名"，那么就用"引用"，而不要用"指针"，以免发生意外
+
+## c++中使用引用传递来提高效率
+
+我们写一个函数，比如 objclass fun(objclass obj); objclass是类名，obj是对象，fun是函数名。
+
+然后调用此函数，编译器分两个步骤：
+
+1.每次通过值传递的方式给函数传递一个对象时，都会建立一个该对象的拷贝。
+
+2.每次通过值从函数返回一个对象时，也会建立另一个拷贝。
+
+也就是说调用一次此函数，系统会自动建立两次的对象拷贝，然后再调用两次析构函数释放对象的拷贝。
+
+我们知道当调用函数的时候，这些对象被复制到栈中，这样做会费时且占用内存，当使用用户定义的大对象时，这种拷贝带来的内存开销是非常显著的。当时用用户建立的类时，每次生成这种临时的拷贝都要调用一个特殊的构造函数：复制构造函数。当函数返回时，对象的临时拷贝被删除，此时需要调用对象的析构函数。如果返回对象时通过值传递的方式，那么必须建立对象的拷贝，然后再删除。对于很大的对象，调用构造函数和析构函数在速度和内存方面都会造成很大的开销。
+
+改善C++效率的方法：
+https://blog.csdn.net/u011808673/article/details/80307358?utm_medium=distribute.pc_relevant.none-task-blog-baidujs_title-0&spm=1001.2101.3001.4242
+
+
+1 尽量减少值传递，多用引用来传递参数。
+
+5 ++i和i++引申出的效率问题
+
+8 减少除法运算的使用
+
+9 将小粒度函数声明为内联函数（inline）
+
+10 与直接初始化对应的是复制初始化，什么是直接初始化？什么又是复制初始化？
+
 # 头文件的意义
 Cpp中有两类文件，一个是cpp源文件.cpp为扩展名，用于写源代码，包括变量和函数定义；一个是头文件.h为扩展名，用于申明变量和函数，不能包含变量和函数的定义。 只能在头文件中写形如：extern int a;和void f();的句子。这些才是声明。如果写上int a;或者void f() {}这样的句子，那么一旦这个头文件被两个或两个以上的.cpp文件包含的话，编译器会立马报错。 "extern  int a;"表示申明一个已定义的变量；"void f();"表示申明一个已定义的无返回值的函数f。
 但是，有三种情况除外，头文件中可以写const和static对象的定义；头文件中可 以写内联函数（inline）的定义；头文件中可以写类 （class）的定义。
